--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,14 @@
     position: fixed;
     right: 25px;
 }
+
+/* Fab */
+.fab-delete {
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 30px;
+    position: fixed;
+    left: 25px;
+    width: 70px;
+    height: 70px;
+}
